@@ -402,6 +402,8 @@ this. Was used when mwEmbed was going to be an extension.
 * (bug 19289) importDump.php can now handle bzip2 and 7zip
 * (bug 20131) Fixed a PHP notice for users having the "rollback" right on
   Special:RecentChangesLinked
+* Do not transform EXIF fields with pure text to avoid results like
+  foo,bar@example,com
 
 == API changes in 1.16 ==
 
